# Editra Launch Plugin
# Author: Cody Precord
# License: wxWindows License
#

#-----------------------------------------------------------------------------#
Version 1.0
Date: xx/xx/2009

+Add support for OCaml (patch from quode)
+Improved Haskell support (patch from quode)

#-----------------------------------------------------------------------------#
Version 0.9
Date: 01/02/2009

+Add support for R
+Fix file type not being checked when window is first shown

#-----------------------------------------------------------------------------#
Version 0.8
Date: 12/11/2008

+Add run last executed program function and shortcut.
+Automatically save the buffer to be excuted if it is modified.
+Fix file list not being populated on first opening.
+Fix incorrect tooltip on exe choice control.

#-----------------------------------------------------------------------------#

Version 0.7
Date: 11/24/2008

+Add support for VBScript
+Number of general UI improvements

#-----------------------------------------------------------------------------#

Version 0.6
Date: 10/27/2008

+Add support for D
+Fix bug with not unsubscribing to some messages on delete causing dead object
errors.

#-----------------------------------------------------------------------------#

Version 0.5
Date: 09/30/2008

+Add support for (HTML, Inno Setup Scripts, newLisp)
+Fix highlighting error in config dialog
+Fix not updating availability after a save as or lexer change

#-----------------------------------------------------------------------------#

Version 0.4
Date: 07/11/2008

+Files of same type are now selectable without changing the buffer
+Fix some layout issues on Windows

#-----------------------------------------------------------------------------#

Version: 0.3
Date: 06/08/2008

+Add shortcut for running Launch (defaults to F5)
+Option to automatically clear buffer between runs
+Output text colors are configurable
+Fix error hotspot highlighting from perl ouput
