@@ -1,4 +1,4 @@
 Name=Launch
 Author=Cody Precord
 Description=Run scripts and view output
-Version=0.9
+Version=1.0
